--- a/MyOpenCvProject/Stitching/Stitching.vcxproj
+++ b/MyOpenCvProject/Stitching/Stitching.vcxproj
@@ -90,6 +90,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AlphaBlender.cpp" />
+    <ClCompile Include="C:\Users\krishna\Desktop\FREAK\freak.cpp" />
     <ClCompile Include="Corners.cpp" />
     <ClCompile Include="HarrisDetector.cpp" />
     <ClCompile Include="LaplacianBlender.cpp" />
@@ -104,6 +105,7 @@
   <ItemGroup>
     <ClInclude Include="Arithmatic.h" />
     <ClInclude Include="AlphaBlender.h" />
+    <ClInclude Include="C:\Users\krishna\Desktop\FREAK\freak.h" />
     <ClInclude Include="Corners.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="HarrisDetector.h" />
