--- a/MyOpenCvProject/Stitching/Stitching.vcxproj
+++ b/MyOpenCvProject/Stitching/Stitching.vcxproj
@@ -108,6 +108,7 @@
     <ClInclude Include="C:\Users\krishna\Desktop\FREAK\freak.h" />
     <ClInclude Include="Corners.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="hammingseg.h" />
     <ClInclude Include="HarrisDetector.h" />
     <ClInclude Include="LaplacianBlender.h" />
     <ClInclude Include="LaplacianBlending.h" />
