--- a/trunk/MyOpenCvProject/Experimental/Experimental.vcxproj.filters
+++ b/trunk/MyOpenCvProject/Experimental/Experimental.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="MyLog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StitchingTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyLog.h">
